<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/mDate"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/mCity"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imgIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mDate"
        app:layout_constraintVertical_bias="0.228" />

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="144dp"
        android:layout_height="124dp"
        android:layout_marginBottom="104dp"
        app:layout_constraintBottom_toTopOf="@+id/mTemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/meteo" />

    <TextView
        android:id="@+id/mTemp"
        android:layout_width="38dp"
        android:layout_height="45dp"
        android:layout_marginBottom="60dp"
        android:text="@string/mTemp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/mFeelsLike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mDescription"
        app:layout_constraintBottom_toTopOf="@+id/mTemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgIcon"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/mFeelsLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="196dp"
        android:text="@string/mFeelsLike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mDaylightHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daylightHours"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mFeelsLike"
        app:layout_constraintVertical_bias="0.355" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:text="o"
        app:layout_constraintBottom_toTopOf="@+id/mFeelsLike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/mTemp"
        app:layout_constraintTop_toBottomOf="@+id/mDescription"
        app:layout_constraintVertical_bias="0.494" />

</androidx.constraintlayout.widget.ConstraintLayout>